# internal/model/certificate_id.go
@@ -1,8 +1,0 @@
-package model
-
-// CertificateID - is an interface that describes information about certificate id
-type CertificateID struct {
-	Action    string
-	ID        uint64
-	Timestamp int64
-}
